--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    <!-- DISABLE CAPTCHA -->
    <input type="hidden" name="_captcha" value="false">
 
-   <input type="hidden" name="_next" value="http://127.0.0.1:5500/success.html">
+   <input type="hidden" name="_next" value="https://jocular-bienenstitch-7c51b4.netlify.app/success.html">
 
    <input type="text" name="Name" placeholder="Name" required>
    <input type="email" name="Email" placeholder="Email" required>
